baggage propagated outside of Mono

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 management.endpoints.web.exposure.include = health, metrics, prometheus
+management.tracing.sampling.probability=1.0
 
 logging.pattern.correlation = [${spring.application.name:}, %X{traceId:-}, %X{spanId:-}, %X{baggageTest:-}]
 
@@ -6,3 +7,6 @@ management.tracing.baggage.correlation.fields = baggageTest
 management.tracing.baggage.remote-fields = baggageTest
 
 spring.reactor.context-propagation = auto
+spring.cloud.stream.kafka.binder.enable-observation = true
+
+
