works with headers and scope in mono

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ management.tracing.sampling.probability=1.0
 
 logging.pattern.correlation = [${spring.application.name:}, %X{traceId:-}, %X{spanId:-}, %X{baggageTest:-}]
 
-management.tracing.baggage.correlation.fields = baggageTest
-management.tracing.baggage.remote-fields = baggageTest
+management.tracing.baggage.correlation.fields = someField,mdcField,otherField
+management.tracing.baggage.remote-fields = someField,mdcField,otherField
 
 spring.reactor.context-propagation = auto
 spring.cloud.stream.kafka.binder.enable-observation = true
+
 
 
