--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ management.endpoints.web.exposure.include = health, metrics, prometheus
 management.tracing.sampling.probability=1.0
 
 logging.pattern.correlation = [${spring.application.name:}, %X{traceId:-}, %X{spanId:-}, %X{baggageTest:-}]
-
+logging.level.org.springframework.cloud.stream = TRACE
 management.tracing.baggage.correlation.fields = someField,mdcField,otherField
 management.tracing.baggage.remote-fields = someField,mdcField,otherField
+
+management.tracing.propagation.consume = w3c,b3
+management.tracing.propagation.produce = w3c,b3
 
 spring.reactor.context-propagation = auto
 spring.cloud.stream.kafka.binder.enable-observation = true
