--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.cloud.stream.kafka.binder.enable-observation = true
 
 
 
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.cloud.stream.function.definition = simpleKafkaConsumer
-
 
 spring.cloud.stream.bindings.simpleKafkaConsumer-in-0.destination = output
 spring.cloud.stream.kafka.bindings.simpleKafkaConsumer-in-0.consumer.startOffset = latest
