testing baggage and tracing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 management.endpoints.web.exposure.include = health, metrics, prometheus
 management.tracing.sampling.probability=1.0
 
-logging.pattern.correlation = [${spring.application.name:}, %X{traceId:-}, %X{spanId:-}, %X{baggageTest:-}]
-logging.level.org.springframework.cloud.stream = TRACE
-management.tracing.baggage.correlation.fields = someField,mdcField,otherField
-management.tracing.baggage.remote-fields = someField,mdcField,otherField
+logging.pattern.correlation = [%X{traceId:-}, %X{spanId:-}, %X{aiqa-transaction-id:-}]
+logging.level.org.springframework.cloud.stream = WARN
+logging.level.org.apache.kafka = WARN
+management.tracing.baggage.remote-fields = aiqa-site-guid,aiqa-transaction-id,aiqa-transaction-name,aiqa-tenant-id,aiqa-tenant-name,aiqa-tenant-domain
+management.tracing.baggage.correlation.fields = aiqa-transaction-id
 
+management.tracing.enabled=true
+management.tracing.sampling.probability= 1.0
+management.tracing.baggage.enabled=true
 management.tracing.propagation.consume = w3c,b3
 management.tracing.propagation.produce = w3c,b3
 
-spring.reactor.context-propagation = auto
+#spring.reactor.context-propagation = auto
 spring.cloud.stream.kafka.binder.enable-observation = true
 
 
@@ -17,5 +21,5 @@ spring.cloud.stream.kafka.binder.enable-observation = true
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.cloud.stream.function.definition = simpleKafkaConsumer
 
-spring.cloud.stream.bindings.simpleKafkaConsumer-in-0.destination = output
+spring.cloud.stream.bindings.simpleKafkaConsumer-in-0.destination = dvRawEvents
 spring.cloud.stream.kafka.bindings.simpleKafkaConsumer-in-0.consumer.startOffset = latest
